<resources>
    <string name="app_name">Play House</string>
    <string name="action_help">Help</string>
    <string name="title_add_event">Add Event</string>
    <string name="title_show_event">Show Events</string>
    <string name="title_director_name">Director Name</string>
    <string name="title_phone">Phone Number</string>
    <string name="title_email_address">Email Address</string>
    <string name="title_event_name">Event Name</string>
    <string name="title_amount_paid">Amount Paid</string>
    <string name="title_description">Event Description</string>
    <string name="title_activity_send_email">Send Email Message</string>
    <string name="title_activity_help">Help</string>
    <string name="title_submit">Submit</string>
    <string name="title_incorrect_password">Incorrect Credentials.Please Try Again</string>
    <string name="title_username">Username</string>
    <string name="title_password">Password</string>
    <string name="title_login_label">Login</string>
    <string name="title_error_email">Please Enter a message</string>
    <string name="title_email_message">Type Message…</string>
    <string name="title_send_email">Send</string>
    <string name="title_add_successful">Event Successfully Saved</string>
    <string name="title_fields_empty">Please Make sure all fields are entered in</string>
    <string name="title_incorrect_digits">Contact Number must be 10 Digits</string>
</resources>
